--- a/index.html
+++ b/index.html
@@ -363,15 +363,15 @@ summary {
 
 
 <h1 class="title toc-ignore">Quantitative Analysis Assignments</h1>
-<h4 class="author">Carole Voulgaris</h4>
-<h4 class="date">8/12/2020</h4>
+<h4 class="author">Mengyao Li</h4>
+<h4 class="date">9/2/2020</h4>
 
 </div>
 
 
-<p>This repository contains all of Carole Voulgaris’s assignments for Quantitative Analysis, Fall 2020.</p>
+<p>This repository contains all of Mengyao Li’s assignments for Quantitative Analysis, Fall 2020.</p>
 <p>The url for assignment submissions is:</p>
-<p><a href="https://ses-5215-f2020.github.io/cvoulgaris-quant/assignment-name" class="uri">https://ses-5215-f2020.github.io/cvoulgaris-quant/assignment-name</a></p>
+<p><a href="https://ses-5215-f2020.github.io/mengyao_li-quant/assignment-name" class="uri">https://ses-5215-f2020.github.io/mengyao_li-quant/assignment-name</a></p>
 <p><em>(replace “assignment-name” with the filename of the html file created from your Rmarkdown file)</em></p>
 
 
