--- a/Assignment-01.html
+++ b/Assignment-01.html
@@ -1550,33 +1550,29 @@ library(knitr)</code></pre>
 </div>
 <div id="load-household-level-data-from-the-1-year-american-community-survey-sample-from-2018" class="section level1">
 <h1>2. Load household-level data from the 1-year American Community Survey Sample from 2018</h1>
+<p>I want to do a household-level analysis.</p>
 <pre class="r"><code>household_variable_2018 &lt;- pums_variables %&gt;%
   distinct(year, survey, var_code, var_label, data_type, level) %&gt;%
   filter(level == &quot;housing&quot;, year == 2018, survey == &quot;acs1&quot;)</code></pre>
 </div>
 <div id="fix-connection-problem" class="section level1">
 <h1>3. Fix connection problem</h1>
-<div id="i-am-constantly-getting-an-error-message-failed-to-connect-to-api.census.gov.-i-have-searched-online-for-different-methods.-this-chunk-solves-my-problem." class="section level2">
-<h2>I am constantly getting an error message “Failed to connect to api.census.gov”. I have searched online for different methods. This chunk solves my problem.</h2>
+<p>I am constantly getting an error message “Failed to connect to api.census.gov”. I have searched online for different methods. This chunk solves my problem.</p>
 <pre class="r"><code> set_config(
      use_proxy(url=&quot;127.0.0.1&quot;, port=7890)
  )
  httr::GET(&quot;https://www.census.gov/&quot;)</code></pre>
 </div>
-</div>
 <div id="choose-5-variables" class="section level1">
 <h1>4. Choose 5 variables:</h1>
-<div id="i-want-to-do-a-household-level-analysis.-after-looking-through-the-variables-available-in-household_variable_2018-i-ve-chosen-the-following-five-variables" class="section level2">
-<h2>I want to do a household-level analysis. After looking through the variables available in household_variable_2018, I ’ve chosen the following five variables:</h2>
+<p>After looking through the variables available in household_variable_2018, I have chosen the following five variables:</p>
 <pre><code> - Food stamp (FS) (categorical)
  - Laptop (LAPTOP) (categorical)
  - Household income (HINCP) (continuous)
  - Number of own children (NOC) (continuous)
  - Property Value (VALP) (continuous)
  </code></pre>
-</div>
-<div id="i-want-my-sample-to-include-all-households-in-new-york-state." class="section level2">
-<h2>I want my sample to include all households in New York State.</h2>
+<p>I want my sample to include all households in New York State. Through those data, I would like to explore the relationship between household income and property value, number of children, food stamps, and laptop. The following questions can find an answer through this analysis: “Do richer families spend more on housing?”, “Do they tend to have more children?”, “Does more children means more laptop?”, “Is there a correlation between income and food stamp used?”, etc.</p>
 <pre class="r"><code>household_data &lt;- get_pums(variables = c(&quot;FS&quot;, &quot;LAPTOP&quot;, &quot;HINCP&quot;, &quot;NOC&quot;, &quot;VALP&quot;),
                            state = &quot;NY&quot;,
                            year = 2018,
@@ -1584,11 +1580,9 @@ library(knitr)</code></pre>
                            recode = TRUE) </code></pre>
 <pre><code>## Getting data from the 2018 1-year ACS Public Use Microdata Sample</code></pre>
 </div>
-</div>
 <div id="select-and-present-columns-from-household_data-dataframe" class="section level1">
 <h1>5. Select and present columns from household_data dataframe</h1>
-<div id="this-dataset-includes-196967-households.-first-10-rows-are-presented-here-as-a-formatted-table." class="section level2">
-<h2>This dataset includes 196,967 households. First 10 rows are presented here as a formatted table.</h2>
+<p>This dataset includes 196,967 households. The first ten rows are presented here as a formatted table.</p>
 <pre class="r"><code>hh_data &lt;- select(household_data, &quot;FS&quot;, &quot;LAPTOP&quot;, &quot;HINCP&quot;, &quot;NOC&quot;, &quot;VALP&quot;)
 knitr::kable(hh_data[1:10,])</code></pre>
 <table>
@@ -1675,6 +1669,9 @@ knitr::kable(hh_data[1:10,])</code></pre>
 </tbody>
 </table>
 </div>
+<div id="saving-data" class="section level1">
+<h1>6. Saving data</h1>
+<pre class="r"><code>write_csv(hh_data, &quot;household data_01.csv&quot;)</code></pre>
 </div>
 
 
