--- a/Assignment-04.html
+++ b/Assignment-04.html
@@ -1637,7 +1637,7 @@ summary(model)</code></pre>
 <p>For the categorical variable of building age, everything is compared to new structures (built between 2000 - 2010; the category isn’t shown in the coefficients table).</p>
 <p>The coefficient estimate for old structures (built between 1960 - 1999) is -34854.3902. This means that, on average and controlling for everything else in the model, the property value for old buildings will be about $34854.4 less than the property value of new structures.</p>
 <p>The coefficient estimate for really new structures (built between 2011 - 2017) is 59399.6403, which indicated that the property value for a really new building would be around $59399.6 more than for a comparable new building.</p>
-<p>The coefficient estimate for really old structures (built before 1960) is 34903.7824, meaning that the property value for really old structures would be around $34903.78 more than new buildings’ property value.</p>
+<p>The coefficient estimate for really old structures (built before 1960) is 34903.7824, meaning that the property value for really old structures would be around $34903.78 more than new buildings’ property value. Maybe it is because those really old buildings that survived are great in structure, architectural design or history.</p>
 <ul>
 <li>Household Language (household_language)</li>
 </ul>
